--- a/website/lectures/lecture15.qmd
+++ b/website/lectures/lecture15.qmd
@@ -7,21 +7,15 @@ execute:
 
 ## Overview
 
-## Beyond Run Expectancy
+## Beyond Run Scoring
 
 ### Game State After 2 Batters
 
 
 
-
-### Number of At-Bats Remaining
-
-
-
-
 ## Incorporating Team Information
 
-Our Markov chain simulations have, so far, assumed that the transition probabilities between states is identical for all teams.
+Our Markov chain simulations have, so far, assumed that the transition probabilities between states are identical for all teams.
 This simplified assumption overlooks important differences between batting and pitching abilities.
 
 ### Empirical Bayes Shrinkage Estimator
