--- a/website/slides/raw_slides/slides_10.qmd
+++ b/website/slides/raw_slides/slides_10.qmd
@@ -39,9 +39,9 @@ execute:
 
 # Data Preparation
 
-## Overview 
+## Overview{.smaller}
 - Focus on 2024-25 regular season
-- Need roster data so define position-specific replacement level
+- Need roster data to define position-specific replacement level
 ```{r}
 #| label: load-pbp-roster
 #| warning: false
@@ -159,7 +159,7 @@ table(rush2024$run_location)
 ```
 - `run_gap`: 
   - `"guard"`: runs through B gap (b/w guard & tackles)
-  - `"tackle"`: run through C gape (outside tackle or b/w tackle & end)
+  - `"tackle"`: run through C gap (outside tackle or b/w tackle & end)
   - `"end"`: run through D gap (outside TE)
   - `NA`: run through A gap (b/w center & guard)
   
@@ -842,7 +842,7 @@ receiver_ipar |>
 - Every offensive play runs through the QB
 - Idea 1: designate one QB per team as non-replacement
   - E.g., QB w/ most rushing & passing attempts
-  - Problem: assumes every NFL team ahs at least one non-replacement QB
+  - Problem: assumes every NFL team has at least one non-replacement QB
 - Idea 2: sort QBs by total number of passes & rushes & take top-32
 - Top-10 IPAR via passing
 ```{r}
@@ -1002,4 +1002,15 @@ skill_war |>
   dplyr::slice_head(n=10)
 
 ```
+
+
+## Reminders{.smaller}
+
+- Project reports & presentations due at **12pm (noon) on Friday**
+- Please also upload recording to shared Box folder (link on Canvas)
+
+- I'll announce peer review assignments by Thursday night
+  - You must review 3 reports & presentations of 3 other teams
+  - Due on 10/17
+  - Rubric + **constructive** comments
 
